completed swagger for edit medication endpoint
